# OpenGLDemo

./: .gitattributes  CMakeLists.txt  README.md  background_fragment_shader.glsl  background_vertex_shader.glsl  fragshader.frag  standard_texture_fragment_shader.glsl  standard_vertex_shader.glsl  terrain_fragment_shader.glsl  terrain_vertex_shader.glsl  vertexshader.glsl
src/: fragshader.frag  main.cpp  vertexshader.glsl
src/glad/: glad.c  glad.h
src/helpers/: CommonObjectWrappers.cpp  TerrainObject.cpp  VBOhelper.cpp  loader.cpp  shadertools.cpp  statistics.cpp
src/include/: glad.h
src/include/helpers/: CommonObjectWrappers.h  TerrainObject.h  VBOhelper.h  loader.h  shadertools.h  statistics.h
